css/style.css
/* ... */
.solution_collaps .card .card-header h5 a i {
  display: inline-block;
  font-style: normal;
  position: absolute;
  right: 20px;
  line-height: 30px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.solution_collaps .card .card-header h5 a i + i {
  display: none;
}

.solution_collaps .card .card-header h5 .collapsed i {
  display: none;
}

.solution_collaps .card .card-header h5 .collapsed i + i {
  display: inline-block;
}

.solution_collaps .card .card-body p {
  font-size: 15px;
  line-height: 28px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: normal;
  color: #7c8d93;
}

/* End Service Solution Area css
============================================================================================ */
/* Elements Page Area css
============================================================================================ */
.elements_title {
  font-size: 24px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
  color: #7c8d93;
  font-weight: normal;
  padding-bottom: 75px;
}

.buttons_area .more_btn {
  width: 176px;
}

.buttons_area .submit_btn {
  border: none;
  position: relative;
  width: 158px;
  height: 56px;
  margin-left: 45px;
  cursor: pointer;
  line-height: 56px;
  outline: none !important;
  -webkit-box-shadow: none !important;
  box-shadow: none !important;
}

.buttons_area .submit_btn:before {
  content: "";
  width: 176px;
  height: 67px;
  border: 2px solid #bee1fe;
  position: absolute;
  left: -8.5px;
  top: -5.5px;
  border-radius: 33px;
}

.buttons_area .submit_btn:focus {
  border: none;
}

.buttons_area .solid_btn {
  margin-left: 40px;
}

.progress_bar_area .company_skill {
  padding-top: 0px;
}

.progress_bar_area .solution_collaps {
  margin-top: 30px;
}

.element_service {
  padding-top: 0px;
  padding-bottom: 100px;
  border-bottom: 0px;
}

.element_service .elements_title {
  padding-bottom: 65px;
}

.pdf_container {
  text-align: center;
  max-width: 80vw;
  margin-left: 10vw;
  height: fit-content;
  margin-bottom: 50px;
}

.cpw_container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 80vw;
  margin-top: 30px;
  margin-bottom: 50px;
  align-items: center;
  z-index: 500;
}

.events_container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 80vw;
  padding: 30px;
  margin-bottom: 50px;
}

.event_box {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  width: 300px;
  text-align: center;
  margin-bottom: 30px;
  margin-right: 20px;
}

.events_title {
  padding-left: 15px;
  font-size: 40px;
  font-weight: 100;
}

.mileston_area {
  padding-bottom: 100px;
}

.mileston_area .elements_title {
  padding-bottom: 65px;
}

.mileston_area .col-lg-3 {
  text-align: center;
}

.mileston_item {
  display: inline-block;
  text-align: left;
}

.mileston_item h4 {
  font-size: 72px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
  background: -moz-linear-gradient(left, #6ebcfe 0%, #997aff 100%);
  /* FF3.6-15 */
  background: -webkit-linear-gradient(left, #6ebcfe 0%, #997aff 100%);
  /* Chrome10-25,Safari5.1-6 */
  background: -webkit-gradient(linear, left top, right top, from(#6ebcfe), to(#997aff));
  background: -o-linear-gradient(left, #6ebcfe 0%, #997aff 100%);
  background: linear-gradient(to right, #6ebcfe 0%, #997aff 100%);
  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6ebcfe', endColorstr='#997aff',GradientType=1 );
  /* IE6-9 */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.mileston_item h5 {
  font-size: 14px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
  color: #0b1033;
}

/* End Elements Page Area css
============================================================================================ */
/* Best 3d Area css
============================================================================================ */
.best_3d_area {
  overflow: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  min-height: 887px;
}

.best_3d_area .left_3d {
  width: calc(50% - 160px);
  float: left;
  position: relative;
}

.best_3d_area .left_3d:before {
  content: "";
  background: url(../img/3d-slider-shap.png) no-repeat scroll center center;
  background-size: cover;
  min-height: 100%;
  position: absolute;
  left: 0px;
  top: 0px;
  width: 797px;
  z-index: -1;
}

.best_3d_area .right_text {
  width: calc(50% + 160px);
  float: right;
}

.shap_slider_inner {
  max-width: 315px;
  float: right;
  margin-right: 160px;
  margin-top: 300px;
}

.shap_slider_inner .item {
  color: #fff;
}

.shap_slider_inner .item img {
  width: auto;
}

.shap_slider_inner .item h4 {
  font-size: 24px;
  line-height: 28px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: bold;
}

.shap_slider_inner .item p {
  font-size: 15px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
  line-height: 28px;
  padding: 25px 0px 55px 0px;
}

.shap_slider_inner .item .media {
  vertical-align: middle;
}

.shap_slider_inner .item .media img {
  -ms-flex-item-align: center;
  align-self: center;
}

.shap_slider_inner .item .media .media-body {
  padding-left: 18px;
}

.shap_slider_inner .item .media .media-body h5 {
  font-size: 15px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
  line-height: 28px;
  color: #0b1033;
  padding-bottom: 5px;
}

.shap_slider_inner .item .media .media-body h6 {
  font-size: 12px;
  font-family: "Be Vietnam", sans-serif;
  font-weight: 500;
}

.shap_slider_inner .owl-dots {
  text-align: right;
  margin-top: 70px;
}

.shap_slider_inner .owl-dots .owl-dot {
  height: 6px;
  width: 6px;
  border-radius: 50%;
  background: #fff;
  display: inline-block;
  margin-right: 10px;
}

.shap_slider_inner .owl-dots .owl-dot:last-child {
  margin-right: 0px;
}
/* ... */

